<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cart_fragment">Cart fragment</string>
    <string name="add_address">Add address</string>
    <string name="close">Close</string>
    <string name="my_cart">My Cart</string>
    <string name="minus_button">Minus button</string>
    <string name="plus_button">Plus button</string>
    <string name="image">Image</string>
    <string name="delete_product">Delete product</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="price_placeholder">$9999.00</string>
    <string name="title_placeholder">Some phone</string>
    <string name="count_placeholder">2</string>
</resources>